--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # Prerequisites
 *.d
-.dat
+*.dat
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
-
 # Precompiled Headers
 *.gch
 *.pch
@@ -30,3 +29,9 @@
 *.exe
 *.out
 *.app
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/settings.json
+.vscode/settings.json
+.vscode/launch.json
+main
